feat: add providers CRUD
